--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.4",
     "http": "0.0.0",
-    "mongoo": "^0.3.5",
     "mongoose": "^5.3.4"
   },
   "devDependencies": {
